--- a/taskMf/src/index.html
+++ b/taskMf/src/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset = "utf-8" />
+    <meta charset="utf-8" />
     <title>taskMf</title>
   </head>
   <body>
-    <div id = "app">
-    </div>
-    <script type = "module" src="./index.js" >
-    </script>
+    <div id="app"></div>
+    <script type="module" src="./index.js"></script>
   </body>
-  
 </html>
